@@ -12,6 +12,7 @@ Patrick Aussems
 Levi Bard
 Kevin Barry
 Derek Battams
+Martin Bayard
 Curtis Beattie
 Dave Bell
 Igor Belyi
@@ -32,6 +33,7 @@ Matt Brenneke
 Jeremy Brooks
 Philip Brown
 Sean Burke
+Julien Cegarra
 Cerulean Studios, LLC
 Jonathan Champ
 Ka-Hing Cheung
